2004-09-21  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_substitute_syscall): No need to
	compute an expiry date in the setitimer() replacement code.

	* nucleus/pod.c (xnpod_suspend_thread): Immediately unblock the
	suspended thread if a preposterous timeout is notified by the
	timer manager.

2004-09-20  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_relax): Feeds
	__adeos_schedule_back_root() with the proper task pointer, which
	must always be the current (Linux-managed) switch lock owner.

2004-09-18  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/GNUmakefile.am (OPTDIRS): Leave the cruncher out of
	the optional dirs.

	* arch/i386/patches: Upgrade to Adeos 2.6.*-i386-r7 final.

2004-09-16  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/dbridge.c: Always return -EPIPE instead of -EIO.

2004-09-14  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c: Call __adeos_schedule_back_root() with the
	proper "prev" task pointer at the time the Linux scheduling tail
	should be run, which must be different from "current".

2004-09-12  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/fusion.c (__pthread_ticks2ns_rt, __pthread_ns2ticks_rt):
	Use signed input/output.

	* skins/rtai/timer.c (rt_timer_ticks2ns, rt_timer_ns2ticks):
	Consider CONFIG_RTAI_HW_APERIODIC_TIMER when converting.

2004-09-11  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/hal/hal.c: Discard obsolete rthal_linux_context[] which
	is not used anymore.

	* include/nucleus/asm-i386/system.h (xnarch_switch_to): Finally
	unstaticalize cr0.

2004-09-09  Evgeny Sinelnikov <linux4sin@mail.ru>

	* configure.in, makefile, scripts/rtai-config.in: Correctly handle
	the --with-linux-dir configure option.

2004-09-07  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_calibrate_sched): Obtain the calibration
	pod and thread memory from the system heap, not from the stack;
	the latter could cause misaligned FPU ops.