@@ -63,7 +63,7 @@
 #endif /* CONFIG_X86_LOCAL_APIC */
 #include <nucleus/asm/hal.h>
 #ifdef CONFIG_PROC_FS
-#include <nucleus/procfs.h>
+#include <linux/proc_fs.h>
 #endif /* CONFIG_PROC_FS */
 #include <stdarg.h>
 
